[package]
    authors = ["Favour Adetona"]
    description = "A Rust-native LLM inference server — continuous batching, KV cache, semantic caching, benchmarking"
    edition = "2021"
    homepage = "https://github.com/0xfave/inference-engine-ops"
    license = "MIT"
    name = "inference-engine-ops"
    version = "0.1.0"

[dependencies]
    anyhow = "1"
    axum = "0.8.9"
    candle-core = "0.11.0"
    candle-nn = "0.11.0"
    candle-transformers = "0.11.0"
    clap = { version = "4", features = ["derive"] }
    hf-hub = "1.0.0-rc.1"
    serde = { version = "1.0", features = ["derive"] }
    serde_json = "1.0.150"
    tokenizers = "0.23.1"
    tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
